--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -3,17 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CSE340 Practice</title>
+    <title><%= title %></title>
     <link rel="stylesheet" href="styles/main.css">
-    <script src="scripts/script.js" defer></script>
 </head>
 <body>
     <header>
         <nav>
             <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="./">Home</a></li>
+                <li><a href="./about">About</a></li>
+                <li><a href="./contact">Contact</a></li>
             </ul>
         </nav>
     </header>
