--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -3,7 +3,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title><%= title %></title>
-    <link rel="stylesheet" href="styles/main.css">
+    <link rel="stylesheet" href="/styles/main.css"/>
     <% if (NODE_ENV.includes('dev')) { %>
     <script>
         const host = window.location.hostname;
