--- a/src/views/errors/404.ejs
+++ b/src/views/errors/404.ejs
@@ -3,7 +3,7 @@
     <!-- Tell the user that the page they are looking for does not exist -->
     <h1>Page Not Found</h1>
     <p>Sorry, the page you are looking for does not exist.</p>
-    <img src="/images/luxio_404.jpg" alt="404 Not Found" />
+    <img src="/images/luxio_404.jpg" alt="Luxio, Pokemon #404" />
     <p>Return to the <a href="/">homepage</a> to continue browsing.</p>
 </main>
 <%- include('../partials/footer.ejs') %>
