--- a/src/views/products.ejs
+++ b/src/views/products.ejs
@@ -18,6 +18,7 @@
                     <h2 class="product-name"><%= product.name %></h2>
                     <p class="product-description"><%= product.description %></p>
                     <p class="product-price">$<%= product.price.toFixed(2) %></p>
+                    <p>Random</p>
                 </div>
             </div>
         <% }); %>
