--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -27,7 +27,7 @@
                 <li><a href="/">Home</a></li>
                 <li><a href="/about">About</a></li>
                 <li><a href="/products">Products</a></li>
-                <li><a href="/explore/games/123">Explore</a></li>
+                <li><a href="/explore/">Explore</a></li>
             </ul>
         </nav>
     </header>
