--- a/src/views/explore.ejs
+++ b/src/views/explore.ejs
@@ -4,7 +4,7 @@
     <div class="explore-details">
         <p>You selected item #<%= id %> in the <%= category %> category.</p>
     </div>
-    <% if (sort !== 'default' || filter !== 'none') { %>
+    <!-- <% if (sort !== 'default' || filter !== 'none') { %>
             <div class="query-params">
                 <p><strong>Applied settings:</strong></p>
                 <ul>
@@ -16,8 +16,8 @@
                     <% } %>
                 </ul>
             </div>
-        <% } %>
-    </div>
+        <% } %> -->
+    <!-- </div>
     <div class="navigation">
         <p>Try these other categories:</p>
         <ul>
@@ -31,7 +31,7 @@
             <li><a href="/explore/movies/7?filter=action">Movies filtered by action</a></li>
             <li><a href="/explore/games/15?sort=rating&filter=rpg">Games sorted by rating and filtered by RPG</a></li>
         </ul>
-    </div>
+    </div> -->
 
 </main>
 <%- include('partials/footer') %>
