updated stack error to only show up in dev mode

--- a/src/views/errors/500.ejs
+++ b/src/views/errors/500.ejs
@@ -3,10 +3,12 @@
     <!-- Tell the user that there was an internal server error -->
     <h1>Internal Server Error</h1>
     <p>Sorry, there was an internal server error.</p>
+<% if (NODE_ENV.includes('dev')) { %>
     <p>Error details (for development only):</p>
     <pre>
-        <%= error %></pre>
+        <%= error %>
         <p>Stack trace:</p>
-        <pre><%= stack %></pre>
+        <%= stack %></pre>
+   <% } %>
 </main>
 <%- include('../partials/footer.ejs') %>
