--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -23,13 +23,15 @@
 <body>
     <header>
         <nav>
-            <ul>
-                <li><a href="/">Home</a></li>
-                <li><a href="/about">About</a></li>
-                <li><a href="/products">Products</a></li>
-                <li><a href="/explore/">Explore</a></li>
-            </ul>
-        </nav>
+    <ul>
+        <li><a href="/">Home</a></li>
+        <li><a href="/about">About</a></li>
+        <li><a href="/products/accessories">Accessories</a></li>
+        <li><a href="/products/mens">Men's Clothing</a></li>
+        <li><a href="/products/shoes">Shoes</a></li>
+        <li><a href="/products/womens">Women's Clothing</a></li>
+    </ul>
+</nav>
     </header>
 </body>
 </html>
