--- a/src/views/products.ejs
+++ b/src/views/products.ejs
@@ -24,8 +24,8 @@
     </div>
  
     <div class="view-toggle">
-        <a href="/products/grid" class="<%= display === 'grid' ? 'active' : '' %>">Grid View</a> | 
-        <a href="/products/details" class="<%= display === 'details' ? 'active' : '' %>">Details View</a>
+        <a href="?display=grid" class="<%= display === 'grid' ? 'active' : '' %>">Grid View</a> | 
+        <a href="?display=details" class="<%= display === 'details' ? 'active' : '' %>">Details View</a>
     </div>
 </main>
 <%- include('partials/footer') %>
