--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -26,11 +26,13 @@
     <ul>
         <li><a href="/">Home</a></li>
         <li><a href="/about">About</a></li>
-        <li><a href="/products/accessories">Accessories</a></li>
-        <li><a href="/products/mens">Men's Clothing</a></li>
-        <li><a href="/products/shoes">Shoes</a></li>
-        <li><a href="/products/womens">Women's Clothing</a></li>
-    </ul>
+        <% navigationCategories.forEach((category) => { %>
+                    <li>
+                        <a href="/products/<%= category.slug %>"><%= category.name %></a>
+                    </li>
+                <% }); %>
+                <li><a href="/dashboard">Dashboard</a></li>
+        </ul>
 </nav>
     </header>
 </body>
